Registration: Fixing widths on all steps. Making button right-aligned. Styling Subscribe Pages step. Styling error handling. Styled scrollbar for webkit browsers.

--- a/app/stylesheets/base/_buttons.sass
+++ b/app/stylesheets/base/_buttons.sass
@@ -12,9 +12,8 @@
   border: 1px solid
   border-color: #ac322f
   box-shadow: inset 0px 1px 0px #e28986
-  padding: 15px
-    top: 8px
-    bottom: 16px
+  padding: 10px 15px
+  text-align: center
   behavior: url("assets/PIE.htc")
   &:hover, &:focus
     color: #fff
